fixed activities colors issue when creating new user

--- a/soldiers_statistics/templates/soldiers_statistics/statistics.html
+++ b/soldiers_statistics/templates/soldiers_statistics/statistics.html
@@ -24,6 +24,7 @@
 
         <table class="table">
             <thead>
+            <tr class="">Wyrażone w liczbie dni</tr>
             <tr class="d-flex justify-content-center">
                 <th class="col col-md-1 px-0" scope="col">#</th>
                 <th class="col col-md-2 px-0" scope="col">
