--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -21,7 +21,8 @@
                             <a class="nav-link" href="{% url 'soldier-list' %}"><h3>Żołnierze</h3></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'activity-unassigned-and-everyday-list' %}"><h3>Aktywności</h3></a>
+                            <a class="nav-link" href="{% url 'activity-unassigned-and-everyday-list' %}"><h3>
+                                Aktywności</h3></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'statistics' %}"><h3>Statystyki</h3></a>
@@ -30,6 +31,11 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="{% url 'account_logout' %}"><h3>Wyloguj</h3></a>
                             </li>
+                            {% if request.user.is_superuser %}
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'demo-delete' %}"><h3>[superuser: DEMO DEL]</h3></a>
+                                </li>
+                            {% endif %}
                         {% else %}
                             <li class="nav-item">
                                 <a class="nav-link" href="{% url 'account_login' %}"><h3>Zaloguj</h3></a>
