--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -9,6 +9,11 @@
 
 {% block content %}
     <div class="d-flex flex-column align-items-center">
+        <form method="get" action="{% url 'demo-account' %}">
+            <button type="submit" class="btn btn-lg btn-primary mb-3" onclick="this.disabled=true; this.form.submit();">
+                Konto demonstracyjne - bez rejestracji</button>
+        </form>
+
         <h4>{% trans "Sign In" %}</h4>
 
         <p>{% blocktrans %}If you have not created an account yet, then please
