--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -14,31 +14,37 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="{% url 'show-diagram' %}"><h3>Grafik</h3></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'soldier-list' %}"><h3>Żołnierze</h3></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'activity-unassigned-and-everyday-list' %}"><h3>
-                                Aktywności</h3></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'statistics' %}"><h3>Statystyki</h3></a>
-                        </li>
                         {% if request.user.is_authenticated %}
                             <li class="nav-item">
-                                <a class="nav-link" href="{% url 'account_logout' %}"><h3>Wyloguj</h3></a>
+                                <a class="nav-link" aria-current="page" href="{% url 'show-diagram' %}"><h3>Grafik</h3></a>
                             </li>
-                            {% if request.user.is_superuser %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'soldier-list' %}"><h3>Żołnierze</h3></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'activity-unassigned-and-everyday-list' %}"><h3>
+                                    Aktywności</h3></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'statistics' %}"><h3>Statystyki</h3></a>
+                            </li>
+                            {% if request.user.is_authenticated %}
                                 <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'demo-delete' %}"><h3>[superuser: DEMO DEL]</h3></a>
+                                    <a class="nav-link" href="{% url 'account_logout' %}"><h3>Wyloguj</h3></a>
+                                </li>
+                                {% if request.user.is_superuser %}
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="{% url 'demo-delete' %}"><h3>[superuser: DEMO DEL]</h3></a>
+                                    </li>
+                                {% endif %}
+                            {% else %}
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'account_login' %}"><h3>Zaloguj</h3></a>
                                 </li>
                             {% endif %}
                         {% else %}
                             <li class="nav-item">
-                                <a class="nav-link" href="{% url 'account_login' %}"><h3>Zaloguj</h3></a>
+                                <a class="nav-link" href="{% url 'show-diagram' %}"><h3>Grafik obecności dla dowódców i szefów pododdziałów</h3></a>
                             </li>
                         {% endif %}
                     </ul>
