--- a/diagram/templates/diagram/show_diagram.html
+++ b/diagram/templates/diagram/show_diagram.html
@@ -3,150 +3,152 @@
 {% load static %}
 
 {% block content %}
-    <div class="p-2">Dzisiejsze rozliczenie stanów osobowych {{ today }}</div>
-    <table class="table table-bordered">
-        <thead>
-        <tr class="grid">
-            {% for key in activities_count.keys %}
-                <th class="col col-1" scope="col" style="text-align: center;">
-                    {{ key }}
-                    {% if key == 'Obecni' %}<a data-bs-toggle="tooltip"
-                                               data-bs-title="Wszyscy niezaangażowani + osoby na służbach i po służbach">
-                        <img src="{% static 'icons/info.svg' %}" height="20px"/></a>{% endif %}
-                    {% if key == 'Do zajęć' %}<a data-bs-toggle="tooltip" data-bs-title="Wszyscy niezaangażowani">
-                        <img src="{% static 'icons/info.svg' %}" height="20px"/></a>{% endif %}
-                    {% if key == 'Służby' %}<a data-bs-toggle="tooltip" data-bs-title="Uwzględnia również OKO">
-                        <img src="{% static 'icons/info.svg' %}" height="20px"/></a>{% endif %}
-                    {% if key == 'Urlopy' %}<a data-bs-toggle="tooltip" data-bs-title="Urlopy, wolne całodniowe, HDK">
-                        <img src="{% static 'icons/info.svg' %}" height="20px"/></a>{% endif %}
-                    {% if key == 'PS' %}
-                        <a data-bs-toggle="tooltip" data-bs-title="W tym zestawieniu uwzględnia również dyżury">
+    <div id="diagram">
+        <div class="p-2">Dzisiejsze rozliczenie stanów osobowych {{ today }}</div>
+        <table class="table table-bordered">
+            <thead>
+            <tr class="grid">
+                {% for key in activities_count.keys %}
+                    <th class="col col-1" scope="col" style="text-align: center;">
+                        {{ key }}
+                        {% if key == 'Obecni' %}<a data-bs-toggle="tooltip"
+                                                   data-bs-title="Wszyscy niezaangażowani + osoby na służbach i po służbach">
                             <img src="{% static 'icons/info.svg' %}" height="20px"/></a>{% endif %}
-                </th>
-            {% endfor %}
-        </tr>
-        </thead>
-        <tbody>
-        <tr class="grid">
-            {% for val in activities_count.values %}
-                <td class="col col-1" style="text-align: center;">
-                    {{ val }}
-                </td>
-            {% endfor %}
-        </tr>
-        </tbody>
-    </table>
-
-    <div class="">
-        <form method="get" class="d-flex justify-content-evenly">
-            <button type="submit" name="start_day" class="btn"
-                    value="{% if request.GET.start_day %}{{ request.GET.start_day|add:"-30" }}{% else %}-31{% endif %}">
-                < 30 dni
-            </button>
-
-            <button type="submit" name="start_day" class="btn"
-                    value="{% if request.GET.start_day %}{{ request.GET.start_day|add:"-5" }}{% else %}-6{% endif %}">
-                < 5 dni
-            </button>
-
-            <button type="submit" name="start_day" class="btn"
-                    value="{% if request.GET.start_day %}{{ request.GET.start_day|add:"-1" }}{% else %}-2{% endif %}">
-                < 1 dzień
-            </button>
-
-            <h5><select name="days_count" style="border: none; text-align: center;"
-                        onchange="this.form.submit()">
-                {% for i in range %}
-                    <option {% if request.session.days_count == i %}selected{% endif %}
-                            value={{ i }}>
-                        Ilość wyświetlanych dni: {{ i }}
-                    </option>
+                        {% if key == 'Do zajęć' %}<a data-bs-toggle="tooltip" data-bs-title="Wszyscy niezaangażowani">
+                            <img src="{% static 'icons/info.svg' %}" height="20px"/></a>{% endif %}
+                        {% if key == 'Służby' %}<a data-bs-toggle="tooltip" data-bs-title="Uwzględnia również OKO">
+                            <img src="{% static 'icons/info.svg' %}" height="20px"/></a>{% endif %}
+                        {% if key == 'Urlopy' %}<a data-bs-toggle="tooltip" data-bs-title="Urlopy, wolne całodniowe, HDK">
+                            <img src="{% static 'icons/info.svg' %}" height="20px"/></a>{% endif %}
+                        {% if key == 'PS' %}
+                            <a data-bs-toggle="tooltip" data-bs-title="W tym zestawieniu uwzględnia również dyżury">
+                                <img src="{% static 'icons/info.svg' %}" height="20px"/></a>{% endif %}
+                    </th>
                 {% endfor %}
-            </select></h5>
-
-            <button type="submit" name="start_day" class="btn"
-                    value="{% if request.GET.start_day %}{{ request.GET.start_day|add:"1" }}{% else %}0{% endif %}">
-                1 dzień >
-            </button>
-
-            <button type="submit" name="start_day" class="btn"
-                    value="{% if request.GET.start_day %}{{ request.GET.start_day|add:"5" }}{% else %}4{% endif %}">
-                5 dni >
-            </button>
-
-            <button type="submit" name="start_day" class="btn"
-                    value="{% if request.GET.start_day %}{{ request.GET.start_day|add:"30" }}{% else %}29{% endif %}">
-                30 dni >
-            </button>
-        </form>
-    </div>
-
-    <table class="table table-bordered table-sm">
-        <thead>
-        <tr>
-            <th scope="col"></th>
-            {% for day in dates %}
-                <th scope="col"
-                    style="text-align: center;
-                            {% if day.0 == today %}background-color: wheat;{% endif %}
-                            {% if day.0.weekday == 6 or day.1 %}color: crimson{% endif %}">
-                    {{ day.0|date:"d M" }}<br>{% if day.1 %}<a data-bs-toggle="tooltip"
-                                                               data-bs-title="{{ day.1 }}"><img
-                        src="{% static 'icons/info.svg' %}" height="20px">
-                </a>{% endif %}{{ day.0|date:"D" }}{% if day.2 %}
-                    <a href="{% url 'activity-unassigned-and-everyday-list' %}" data-bs-toggle="tooltip"
-                       data-bs-title="{{ day.2 }}"><img src="{% static 'icons/excl.svg' %}" height="20px">
-                    </a>{% endif %}
-                </th>
-            {% endfor %}
-        </tr>
-        </thead>
-        <tbody>
-        {% for soldier, days in activities.items %}
-            <tr>
-                <th scope="row" style="white-space: nowrap;">
-                    <a class="text-decoration-none text-dark"
-                       href="{% url 'soldier-detail' soldier.pk %}">
-                        {{ forloop.counter }}. {{ soldier.last_name }} {{ soldier.first_name }} ({{ soldier.rank }})
-                    </a>
-                </th>
-                {% for activity in days.values %}
-                    <td style="text-align: center; background-color: {{ activity.color }}"
-                        {% if activity.description %}data-bs-toggle="tooltip"
-                        data-bs-title="Opis: {{ activity.description }}"{% endif %}>
-                        <form action="{% url 'show-diagram' %}" method="POST" id="activities_form">
-                            {% csrf_token %}
-
-                            <input type="hidden" name="soldier" value="{{ soldier }}"/>
-                            <input type="hidden" name="soldier_pk" value="{{ activity.soldier_pk }}"/>
-                            <input type="hidden" name="activity_previous" value="{{ activity.name }}"/>
-                            <input type="hidden" name="activity_previous_pk" value="{{ activity.pk }}"/>
-                            <input type="hidden" name="date" value="{{ activity.date }}"/>
-                            <input type="hidden" name="start_day" value="{{ request.GET.start_day }}"/>
-                            <input type="hidden" name="days_count" value="{{ request.GET.days_count }}"/>
-
-                            <select name="activity_new" style="width: min-content; border: none;
-                            background-color: {{ activity.color }}"
-                                    onchange="this.form.submit()">
-                                {% for choice in choices %}
-                                    <option {% if activity.name.name == choice %}selected{% endif %} class="small"
-                                            value="{{ choice }}">{{ choice }}</option>
-                                {% endfor %}
-                            </select>
-                        </form>
+            </tr>
+            </thead>
+            <tbody>
+            <tr class="grid">
+                {% for val in activities_count.values %}
+                    <td class="col col-1" style="text-align: center;">
+                        {{ val }}
                     </td>
                 {% endfor %}
             </tr>
-        {% empty %}
-            <div class="p-2"><b>Nie dodałeś jeszcze żadnego żołnierza. <a style="text-decoration: none;"
-                                                                       href="{% url 'soldier-create' %}">Kliknij aby
-                dodać.</a></b></div>
-        {% endfor %}
-        </tbody>
-    </table>
+            </tbody>
+        </table>
 
-    <div class="d-flex flex-row-reverse">
-        <a class="btn btn-outline-primary" href="{% url 'activity-colors-update' %}">Edytuj kolory</a>
+        <div class="">
+            <form method="get" class="d-flex justify-content-evenly">
+                <button type="submit" name="start_day" class="btn"
+                        value="{% if request.GET.start_day %}{{ request.GET.start_day|add:"-30" }}{% else %}-31{% endif %}">
+                    < 30 dni
+                </button>
+
+                <button type="submit" name="start_day" class="btn"
+                        value="{% if request.GET.start_day %}{{ request.GET.start_day|add:"-5" }}{% else %}-6{% endif %}">
+                    < 5 dni
+                </button>
+
+                <button type="submit" name="start_day" class="btn"
+                        value="{% if request.GET.start_day %}{{ request.GET.start_day|add:"-1" }}{% else %}-2{% endif %}">
+                    < 1 dzień
+                </button>
+
+                <h5><select name="days_count" style="border: none; text-align: center;"
+                            onchange="this.form.submit()">
+                    {% for i in range %}
+                        <option {% if request.session.days_count == i %}selected{% endif %}
+                                value={{ i }}>
+                            Ilość wyświetlanych dni: {{ i }}
+                        </option>
+                    {% endfor %}
+                </select></h5>
+
+                <button type="submit" name="start_day" class="btn"
+                        value="{% if request.GET.start_day %}{{ request.GET.start_day|add:"1" }}{% else %}0{% endif %}">
+                    1 dzień >
+                </button>
+
+                <button type="submit" name="start_day" class="btn"
+                        value="{% if request.GET.start_day %}{{ request.GET.start_day|add:"5" }}{% else %}4{% endif %}">
+                    5 dni >
+                </button>
+
+                <button type="submit" name="start_day" class="btn"
+                        value="{% if request.GET.start_day %}{{ request.GET.start_day|add:"30" }}{% else %}29{% endif %}">
+                    30 dni >
+                </button>
+            </form>
+        </div>
+
+        <table class="table table-bordered table-sm">
+            <thead>
+            <tr>
+                <th scope="col"></th>
+                {% for day in dates %}
+                    <th scope="col"
+                        style="text-align: center;
+                                {% if day.0 == today %}background-color: wheat;{% endif %}
+                                {% if day.0.weekday == 6 or day.1 %}color: crimson{% endif %}">
+                        {{ day.0|date:"d M" }}<br>{% if day.1 %}<a data-bs-toggle="tooltip"
+                                                                   data-bs-title="{{ day.1 }}"><img
+                            src="{% static 'icons/info.svg' %}" height="20px">
+                    </a>{% endif %}{{ day.0|date:"D" }}{% if day.2 %}
+                        <a href="{% url 'activity-unassigned-and-everyday-list' %}" data-bs-toggle="tooltip"
+                           data-bs-title="{{ day.2 }}"><img src="{% static 'icons/excl.svg' %}" height="20px">
+                        </a>{% endif %}
+                    </th>
+                {% endfor %}
+            </tr>
+            </thead>
+            <tbody>
+            {% for soldier, days in activities.items %}
+                <tr>
+                    <th scope="row" style="white-space: nowrap;">
+                        <a class="text-decoration-none text-dark"
+                           href="{% url 'soldier-detail' soldier.pk %}">
+                            {{ forloop.counter }}. {{ soldier.last_name }} {{ soldier.first_name }} ({{ soldier.rank }})
+                        </a>
+                    </th>
+                    {% for activity in days.values %}
+                        <td style="text-align: center; background-color: {{ activity.color }}"
+                            {% if activity.description %}data-bs-toggle="tooltip"
+                            data-bs-title="Opis: {{ activity.description }}"{% endif %}>
+                            <form hx-post="{% url 'show-diagram' %}" method="POST" id="activities_form">
+                                {% csrf_token %}
+
+                                <input type="hidden" name="soldier" value="{{ soldier }}"/>
+                                <input type="hidden" name="soldier_pk" value="{{ activity.soldier_pk }}"/>
+                                <input type="hidden" name="activity_previous" value="{{ activity.name }}"/>
+                                <input type="hidden" name="activity_previous_pk" value="{{ activity.pk }}"/>
+                                <input type="hidden" name="date" value="{{ activity.date }}"/>
+                                <input type="hidden" name="start_day" value="{{ request.GET.start_day }}"/>
+                                <input type="hidden" name="days_count" value="{{ request.GET.days_count }}"/>
+
+                                <select name="activity_new" style="width: min-content; border: none;
+                                background-color: {{ activity.color }}" hx-post="{% url 'show-diagram' %}" hx-target="#whole_body">
+    {#                                    onchange="this.form.submit()">#}
+                                    {% for choice in choices %}
+                                        <option {% if activity.name.name == choice %}selected{% endif %} class="small"
+                                                value="{{ choice }}">{{ choice }}</option>
+                                    {% endfor %}
+                                </select>
+                            </form>
+                        </td>
+                    {% endfor %}
+                </tr>
+            {% empty %}
+                <div class="p-2"><b>Nie dodałeś jeszcze żadnego żołnierza. <a style="text-decoration: none;"
+                                                                           href="{% url 'soldier-create' %}">Kliknij aby
+                    dodać.</a></b></div>
+            {% endfor %}
+            </tbody>
+        </table>
+
+        <div class="d-flex flex-row-reverse">
+            <a class="btn btn-outline-primary" href="{% url 'activity-colors-update' %}">Edytuj kolory</a>
+        </div>
     </div>
 
 
