--- a/templates/account/base.html
+++ b/templates/account/base.html
@@ -13,31 +13,49 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
             crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/htmx.org@1.8.5"></script>
 
     <title>{% block title %}Grafik{% endblock %}</title>
 
-
+    <script>
+        let tooltipTriggerList;
+        let tooltipList;
+    </script>
 </head>
 <body>
-{% include 'navbar.html' %}
+    <div id="whole_body">
+        {% include 'navbar.html' %}
 
-{% include 'messages.html' %}
+        {% include 'messages.html' %}
 
-{% if user|is_guest_user %}
-    <div class="d-flex flex-column align-items-center">
-        <div class="alert alert-warning show" role="alert">
-            Konto demonstracyjne do sprawdzenia funkcjonalności aplikacji
-        </div>
+        {% if user|is_guest_user %}
+            <div class="d-flex flex-column align-items-center">
+                <div class="alert alert-warning show" role="alert">
+                    Konto demonstracyjne do sprawdzenia funkcjonalności aplikacji
+                </div>
+            </div>
+        {% endif %}
+
+        {% block content %}
+
+        {% endblock %}
     </div>
-{% endif %}
-
-{% block content %}
-
-{% endblock %}
 
     <script>
-        const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
-        const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
+        document.body.addEventListener('htmx:configRequest', (event) => {
+            event.detail.headers['X-CSRFToken'] = '{{ csrf_token }}'; //insert csrf token when performing AJAX request
+    })
+    </script>
+
+    <script>
+            if (tooltipList){
+                const tooltips = document.querySelectorAll('.tooltip')
+                tooltips.forEach(tooltip =>{
+                    tooltip.remove();
+                })
+            }
+            tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
+            tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
     </script>
 </body>
 </html>
